2006-11-04  Michael Schlenker <mic42@users.sourceforge.net>
        
        * ldapx.tcl     Fix for entry diff applied.
          ldap.man      Thanks to Pierre David for providing it.
          pkgIndex.tcl           
        
2006-10-26  Michael Schlenker <mic42@users.sourceforge.net>
	
	* ldap.man      Some typo fixes, minor clarifications 
	                and rewording.

2006-10-09  Michael Schlenker <mic42@users.sourceforge.net>

        * ldap.tcl      The abandon operation was incorrectly encoded.
                        This is now fixed and the operation works
                        as expected.

2006-10-09  Michael Schlenker <mic42@users.sourceforge.net>

        * ldapx.tcl     Fixed incorrect utf-8 conversion and
                        broken ldif::write method.
                        Thanks to Pierre David for providing
                        the fix.
                        
2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-09-28  Michael Schlenker <mic42@users.sourceforge.net>
        
        * ldap.tcl      Nasty bug in ReceiveBytes, not detecting
                        partial results correctly.
        
2006-09-27  Michael Schlenker <mic42@users.sourceforge.net>
        
        * ldapx.test:   New test file for the ldapx entry functions.
                        Thanks to Pierre David for providing it.
                        
2006-09-26  Andreas Kupries  <andreask@activestate.com>

	* ldapx.man: Fixed ambigous subsection titles reported by Larry
	  Virden via [SF Tcllib Bug 1565836]. Additionally fixed a syntax
	  error (missing closed double-apostroph) in an example.

2006-09-24  Michael Schlenker <mic42@users.sourceforge.net>

	* ldap.tcl	Fixed bug in secure_connect. The
			channel wasn't fconfigured correctly and
			the fileevent handler was not installed
			in the correct way.

2006-09-22  Michael Schlenker <mic42@users.sourceforge.net>
