@@ -1,3 +1,8 @@
+2006-11-08  Michael Schlenker <mic42@users.sourceforge.net>
+
+        * ldapx.tcl     Whitespace fixes. Tests for fixed bug 
+          ldapx.test    added.
+          
 2006-11-04  Michael Schlenker <mic42@users.sourceforge.net>
         
         * ldapx.tcl     Fix for entry diff applied.
